# claude-watch-video

./: .gitignore  LICENSE  README.md  ROADMAP.md  SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: smoketest.yml
docs/: configuration.md  cost-study-atlassian-video.md  marketplace-submission.md  promotion-posts.md  walkthrough-claude-code-release.md  walkthrough-fomc.md
docs/examples/: atlassian-architecture-report.html
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/tests/: test_mcp_protocol.py
scripts/: _cache.py  _common.py  dedup.py  fetch.py  frames.py  highlights.py  ocr.py  post_to_jira.py  probe.py  relabel_speakers.py  report.py  smoketest.py  transcribe.py  watch_batch.py  watch_video.py
